# speedtest-exporter

./: .dockerignore  .gitignore  .jscpd.json  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  lint.yml  package-beta.yml  package.yml  release.yml  security-scan.yml
Dashboard/: Speedtest-Exporter.json
src/: exporter.py  requirements-dev.txt  requirements.txt
tests/: test_exporter.py
